Closed Bug 425011 Opened 17 years ago Closed 17 years ago

Crash @ConvertCocoaKeyEventToMacEvent with egbridge (Japanese IME)

Categories

(Core :: Widget: Cocoa, defect)

x86
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: masayuki, Assigned: masayuki)

Details

(Keywords: crash, inputmethod, intl)

Attachments

(1 file)

Attached patch Patch v1.0Splinter Review
I can crash Fx with egbridge (Japanese IME). I think that we need following conditions for reproducing this bug: 1. the system has other (non-JIS) keyboard layouts. 2. that has dead key. 3. the ASCII character inputting mode uses non-JIS keyboard layout. #3 is the bug of egbridge. When I changed to inputting mode to that the keyboard layout should be set to JIS keyboard layout. But egbridge doesn't change the actual keyboard layout. And then, I press the dead key of the wrong keyboard layout, Fx is crashed at ConvertCocoaKeyEventToMacEvent. At that time, egbridge calls insertText with "correct" character. However, the native key event doesn't have characters (because it's dead key event!). Therefore, ConvertCocoaKeyEventToMacEvent accesses to the out of character array. The attached patch only fixes the crash bug. That doesn't fix the unmatch problem between native event and insertText event. Therefore, I cannot type correct characters on Flash. If we can fix it, we should do. However, I have no idea for that now... (note that egbridge is finished produce, unfortunately...) But this bug is rare case, fortunately.
Flags: blocking1.9?
Attachment #311588 - Flags: review?(joshmoz)
Flags: blocking1.9? → blocking1.9+
Attachment #311588 - Flags: superreview?(vladimir)
Attachment #311588 - Flags: review?(joshmoz)
Attachment #311588 - Flags: review+
Attachment #311588 - Flags: superreview?(vladimir) → superreview+
Comment on attachment 311588 [details] [diff] [review] Patch v1.0 this is simple patch, and fixes a crash bug at inputting the Japanese text.
Attachment #311588 - Flags: approval1.9b5?
Comment on attachment 311588 [details] [diff] [review] Patch v1.0 a1.9b5=beltzner
Attachment #311588 - Flags: approval1.9b5? → approval1.9b5+
checked-in, thanks!
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: