Bug 425011 Crash @ConvertCocoaKeyEventToMacEvent with egbridge (Japanese IME) r=josh, sr=vlad, a1.9b5=beltzner